# idena-wasm

./: .gitattributes  .gitignore  Cargo.toml  README.md  bindings.h  build.sh  cbindgen.toml
.github/workflows/: build.yml  release.yml  release_aarch64.yml
examples/cross-contract-call/caller/: jest.config.js  package-lock.json  package.json
examples/cross-contract-call/caller/assembly/: bytes.ts  env.ts  index.ts  persistentMap.ts  utils.ts
examples/cross-contract-call/caller/tests/: caller.test.ts
examples/cross-contract-call/function/: package-lock.json  package.json
examples/cross-contract-call/function/assembly/: debug.ts  env.ts  index.ts  keyValue.ts  region.ts
examples/erc20/: package-lock.json  package.json
examples/erc20/assembly/: address.ts  env.ts  index.ts  persistentMap.ts
examples/idena-sdk-as/: .eslintrc.js  .prettierrc.js  package-lock.json  package.json
examples/idena-sdk-as/assembly/: bytes.ts  env.ts  region.ts
examples/idena-sdk-as/assembly/__tests__/: example.spec.ts
examples/idena-sdk-as/assembly/proto/: models.proto  models.ts
examples/shared-fungible-token/root/: package-lock.json  package.json
examples/shared-fungible-token/wallet/: package-lock.json  package.json
examples/shared-fungible-token/wallet/assembly/: index.ts
examples/test-cases-contract/: package-lock.json  package.json
examples/test-cases-contract/assembly/: index.ts
go-binding/: go.mod  go.sum  main.go
go-binding/lib/: bindings.h  callback_cgo.go  callbacks.go  embed.go  env.go  lib.go  lib_test.go  link_std.go
go-binding/lib/protobuf/: models.pb.go
go-binding/lib/testdata/: optimized.wasm
idena-wasm/: Cargo.toml  bindings.h  build.sh
idena-wasm-binding/: go.mod  go.sum  main.go
idena-wasm-binding/lib/: bindings.h  callbacks.go  env.go  errors.go  lib.go  lib_test.go  memory.go
idena-wasm-binding/lib/protobuf/: wasmmodels.pb.go  wasmmodels.proto
idena-wasm/.cargo/: config.toml
idena-wasm/src/: backend.rs  costs.rs  environment.rs  errors.rs  exports.rs  gatekeeper.rs  go.rs  imports.rs  lib.rs  macros.rs  memory.rs  optimized.wasm  runner.rs  tests.rs  types.rs
idena-wasm/src/proto/: models.proto  models.rs
src/: args.rs  backend.rs  costs.rs  environment.rs  errors.rs  exports.rs  gatekeeper.rs  go.rs  imports.rs  lib.rs  macros.rs  memory.rs  runner.rs  tests.rs  types.rs
src/proto/: models.proto  models.rs
